--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node_modules/.bin/webpack-dev-server",
-    "dist":"node_modules/.bin/webpack -p"
+    "dev": "node_modules/.bin/webpack-dev-server",
+    "dist": "node_modules/.bin/webpack -p"
   },
   "repository": {
     "type": "git",
@@ -14,7 +14,6 @@
   },
   "author": "Fan Zhang",
   "license": "ISC",
- 
   "bugs": {
     "url": "https://github.com/Fanz0614/react-back-end/issues"
   },
@@ -38,6 +37,8 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "react": "16.2.0",
-    "react-dom": "16.2.0"
+    "react-dom": "16.2.0",
+    "react-router-dom": "^5.2.0",
+    "yarn": "^1.22.5"
   }
 }
